--- a/reader.html
+++ b/reader.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reading... - FGFS MEMOIRE</title>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,700;1,400&family=Roboto:wght@300;400;500&family=Noto+Serif+SC:wght@300;400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,700;1,400&family=Roboto:wght@300;400;500&family=Noto+San+SC:wght@300;400;700&display=swap" rel="stylesheet">
     
     <style>
         :root {
@@ -29,7 +29,7 @@
            background-color: var(--bg-deep);
     color: var(--text-white);
     /* 优先使用 Roboto，中文保留思源宋体作为兜底 */
-    font-family: 'Roboto', 'Noto Serif SC', serif; 
+    font-family: 'Roboto', 'Noto San SC', san-serif; 
     margin: 0; padding: 0;
     min-height: 100vh;
     background-image: radial-gradient(circle at 50% 30%, #1a254a 0%, #0b1026 70%);
@@ -73,7 +73,7 @@
         }
 
         /* 文章内容样式 */
-        #content { line-height: 1.5; font-size: 0.9em; color: #e0e0e0; font-weight: 300; }
+        #content { line-height: 1.6; font-size: 0.9em; color: #e0e0e0; font-weight: 300; }
         #content h1 { font-family: 'Playfair Display', serif; color: var(--gogh-yellow); font-size: 2.8em; text-align: center; margin-bottom: 30px; text-shadow: 0 0 15px rgba(252, 212, 64, 0.3); }
         #content h2 { color: var(--text-white); margin-top: 50px; border-bottom: 1px solid var(--glass-border); padding-bottom: 10px; }
         #content p { margin-bottom: 20px; text-align: justify; }
@@ -135,5 +135,6 @@
     </script>
 </body>
 </html>
+
 
 
