--- a/reader.html
+++ b/reader.html
@@ -136,7 +136,7 @@
 
     <div class="container">
         <div class="nav-bar">
-            <a href="javascript:history.back()" class="back-link">Back</a>
+            <a href="index.html" class="back-link">Back</a>
         </div>
         
         <div id="content">Loading story...</div>
@@ -195,5 +195,6 @@
     </script>
 </body>
 </html>
+
 
 
